@@ -1,7 +1,7 @@
 // synthv1_formant.h
 //
 /****************************************************************************
-   Copyright (C) 2012-2016, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2012-2019, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -40,6 +40,7 @@ public:
 	static const uint32_t NUM_VTABS = 5;
 	static const uint32_t NUM_VOWELS = 5;
 	static const uint32_t NUM_FORMANTS = 5;
+	static const uint32_t NUM_STEPS = 32;
 
 	// 2-pole filter coeffs.
 	struct Coeffs { float a0, b1, b2; };
@@ -106,7 +107,7 @@ public:
 
 	// ctor.
 	synthv1_formant(Impl *pImpl = 0)
-		: m_pImpl(pImpl), m_cutoff(0.0f), m_reso(0.0f)
+		: m_pImpl(pImpl), m_cutoff(0.0f), m_reso(0.0f), m_nstep(0)
 		{ reset_coeffs(); }
 
 	// reset impl.
@@ -159,7 +160,6 @@ protected:
 
 		void set_value(float value)
 		{
-			const uint32_t NUM_STEPS = 32;
 			m_nstep = NUM_STEPS;
 			m_vstep = (value - m_value) / float(m_nstep);
 		}
@@ -227,8 +227,12 @@ protected:
 	// update method
 	void update(float cutoff, float reso)
 	{
+		if (m_nstep > 0)
+			--m_nstep;
+		else
 		if (::fabsf(m_cutoff - cutoff) > 0.001f ||
 			::fabsf(m_reso   - reso)   > 0.001f) {
+			m_nstep = NUM_STEPS;
 			m_cutoff = cutoff;
 			m_reso = reso;
 			reset_coeffs();
@@ -246,6 +250,9 @@ private:
 	// parameters.
 	float m_cutoff;
 	float m_reso;
+
+	// slew control.
+	uint32_t m_nstep;
 
 	// formant filters
 	Filter m_filters[NUM_FORMANTS];
